--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -6,10 +6,8 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: var(--background-color);
-  color: var(--text-color);
+body, #root {
+  min-height: 100vh;
 }
 
 .text-center {
