--- a/src/AppRouter.css
+++ b/src/AppRouter.css
@@ -7,8 +7,9 @@
 .page-transition-enter-active {
   opacity: 1;
   transform: translateX(0);
-  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1),
-  transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    opacity 200ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-transition-exit {
@@ -19,8 +20,9 @@
 .page-transition-exit-active {
   opacity: 0;
   transform: translateX(-20px);
-  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1),
-  transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    opacity 150ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-transition-back-enter {
@@ -32,8 +34,9 @@
 .page-transition-back-enter-active {
   opacity: 1;
   transform: translateX(0);
-  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1),
-  transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    opacity 200ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 200ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-transition-back-exit {
@@ -44,6 +47,7 @@
 .page-transition-back-exit-active {
   opacity: 0;
   transform: translateX(20px);
-  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1),
-  transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    opacity 150ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
