fix: the grades are now visible on light mode (#192)
* fix: the grades are now visible on light mode

* style: formatting

---------

Co-authored-by: Florent Gashi <florent.gashi@netcetera.com>

--- a/src/pages/home/school/SchoolPage.css
+++ b/src/pages/home/school/SchoolPage.css
@@ -24,3 +24,12 @@
   color: rgba(255, 255, 255, 0.7);
   display: block;
 }
+
+@media (prefers-color-scheme: light) {
+  .grade-subject {
+    color: #000000;
+  }
+  .grade-average {
+    color: rgba(0, 0, 0, 0.7);
+  }
+}
